Fix overlapping text in rules table

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,6 +69,7 @@
 .table-col-search {
     width: 15%;
     max-width: 170px;
+    overflow: hidden;
 }
 
 .table-col-source,
